--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="https://github.com/MargarettOcharon/margarett.github.io/blob/main/assets/img/portfolio/Margarett.jpg" class="img-fluid" alt="">
+            <img src="c:\Users\ACER\Desktop\Myportfolio\assets\img\portfolio\Margarett.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>IT2R1 &amp; BSIT Student </h2>
